--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
-node_modules/
-src/.vuepress/.cache/
-src/.vuepress/.temp/
-src/.vuepress/dist/
+node_modules
 package-lock.json
+src/.vuepress/.cache
+src/.vuepress/.temp
+src/.vuepress/dist
